fix automaton templates

--- a/config/nvim/plugins/automaton-templates/cargo/launch.json
+++ b/config/nvim/plugins/automaton-templates/cargo/launch.json
@@ -13,9 +13,7 @@
             name: "Run release",
             program: "${ws.release_dir}/${workspace_name}",
 	    depends: [ "Build-release" ],
-            cwd: "${workspace_folder}",
-            depends: [ ],
-            default: true
+            cwd: "${workspace_folder}"
         }
     ]
 }
